adding the link url

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag "home", :media => "all" %>
  <div class="container">
-<section class="hero is-light">
+<section class="hero is-dark">
   <div class="hero-body">
     <p class="title">
       Sports online
@@ -14,54 +14,26 @@
 
 <br>
 <br>
-<div class="columns is-multiline is-mobile>
 
+
+<!--- i frame container --->
+
+<body style="background-color: hsl(0, 0%, 4%);">
+<div class="columns">
   <div class="column">
-  <div class="card">
+   <div class="card">
   <div class="card-content">
     <div class="content">
-   <figure class="image is-2by1	">
-  <iframe class="has-ratio" width="640" height="360" src="https://v3.sportsonline.to/channels/hd/hd1.php" frameborder="0" allowfullscreen></iframe>
+   <figure class="image is-16by9">
+  <iframe class="has-ratio" width="640" height="360" src="https://v3.sportsonline.to/channels/hd/hd1.php" frameborder="0" allowfullscreen>
+    
+  </iframe>
 </figure>
     </div>
   </div>
 </div>
   </div>
-  <div class="column">
-<div class="card">
-  <div class="card-content">
-    <div class="content">
-    	   <figure class="image is-2by1	">
 
- <iframe class="has-ratio" width="640" height="360" src="https://v3.sportsonline.to/channels/hd/hd1.php" frameborder="0" allowfullscreen></iframe>
-</figure>
-    </div>
-  </div>
 </div>
-  </div>
-  <div class="column">
-    <div class="card">
-  <div class="card-content">
-    <div class="content">
-    	   <figure class="image is-2by1	
-">
-
-  <iframe class="has-ratio" width="640" height="360" src="https://v3.sportsonline.to/channels/hd/hd1.php" frameborder="0" allowfullscreen></iframe>
-</figure>
-    </div>
-  </div>
-</div>
-  </div>
-  <div class="column">
-<div class="card">
-  <div class="card-content">
-    <div class="content">
-    	   <figure class="image is-2by1	">
-
- <iframe class="has-ratio" width="640" height="360" src="https://v3.sportsonline.to/channels/hd/hd1.php" frameborder="0" allowfullscreen></iframe>
-</figure>
-    </div>
-  </div>
-</div>  </div>
-</div>
+</body>
 </div>
