--- a/app/assets/stylesheets/login.css
+++ b/app/assets/stylesheets/login.css
@@ -25,17 +25,14 @@ background-position:center;
 
 
 .form {
-background-color:  hsl(217, 71%, 53%)	 ;
-width: 50%;
-color: white;
-margin: 0;
+  font-size: 22px;
+  width: auto;
+  color: white;
+  margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) }
+    margin-right: -50%;
+    transform: translate(-50%, -50%) 
 }
 
-.inputform {
-
-
-}
