--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,17 +3,15 @@
 <section class="hero is-dark">
   <div class="hero-body">
     <p class="title">
-      Sports online
+      Sports online, escolha o seu canal 
     </p>
-    <p class="subtitle">
-      Primary subtitle
-    </p>
+  <%= form_with model: @link do |f| %>
+ <%= f.text_field :url , class: "input is-link" , style: "width:30%;" %>
+  <%= f.submit "submeter" , class: "button is-link"   %>
+<% end %>
+
   </div>
 </section>
-
-
-<br>
-<br>
 
 
 <!--- i frame container --->
@@ -25,7 +23,7 @@
   <div class="card-content">
     <div class="content">
    <figure class="image is-16by9">
-  <iframe class="has-ratio" width="640" height="360" src="https://v3.sportsonline.to/channels/hd/hd1.php" frameborder="0" allowfullscreen>
+  <iframe class="has-ratio" width="640" height="360" src="<%= @firstlink.url %>" frameborder="0" allowfullscreen>
     
   </iframe>
 </figure>
