--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,19 @@
         opacity: 1">
 <%= stylesheet_link_tag "home", :media => "all" %>
 
+<a role="button" class="navbar-burger" data-target="navMenu" aria-label="menu" aria-expanded="false">
+  <span aria-hidden="true"></span>
+  <span aria-hidden="true"></span>
+  <span aria-hidden="true"></span>
+</a>
+
+<div class="navbar-menu" id="navMenu">
+  <!-- navbar-start, navbar-end... -->
+</div>
+
+
+<br>
+
  <div class="container">
 <section class="hero is-dark">
   <div class="hero-body">
