--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html style="background: radial-gradient(circle at 25% 25%,transparent 14%,#000000 15%, #000000 20%, transparent 21%, transparent 100%), radial-gradient(circle at 75% 75%, transparent 11%, #000000 12%, #000000 17%, transparent 18%);
+        background-size: 1em 1em;
+        background-color: #111111;
+        opacity: 1">
   <head>
     <title>Sportsonline</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -11,7 +14,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body>
+  <body >
 
      <p class="notice"><% notice %></p>
        <p class="alert"><% alert %></p>
