--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -184,7 +184,13 @@
 </div>
 
 <footer>
-
+<div class="container">
+  <h5> Hi <%= @current_user.email %> </h5>
+  <h4> Users </h4>
+    <%= render @users %>
+  <h4> Rooms </h4>
+  <%= render @rooms %>
+</div>
 </footer>
 </html>
 
