--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,6 @@
 <div>
   <% unless message.room.is_private %>
-    <h6 > <%= message.user.email %> </h6>
+    <h6 class="name"> <%= message.user.username %> </h6>
   <% end %>
   <%= message.content %>
 </div>
