--- a/app/views/layouts/_new_message_form.html.erb
+++ b/app/views/layouts/_new_message_form.html.erb
@@ -1,7 +1,8 @@
 <div class="message is-light">
   <%= form_with(model:[ @single_room , @message], remote: true, class: "message-body" ) do |f| %> 
-    <%= f.text_field :content, id: 'chat-text', class: "textarea ", autocomplete: 'off' %>
-    <%= f.submit data: { disable_with: false }, class: "button " %>
+    <%= f.text_field :content, id: 'chat-text', class: "textarea is-dark ", autocomplete: 'off' %>
+    <br>
+    <%= f.submit data: { disable_with: false }, class: "button is-info" %>
   <% end %>
 </div>
 
