--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,6 +1,24 @@
-<div>
-  <% unless message.room.is_private %>
-    <h6 class="name"> <%= message.user.username %> </h6>
-  <% end %>
+<style>
+.message-box {
+  width: fit-content;
+  max-width: 70%;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  background-color:  #000080 ;
+  padding:10px;
+  color: white;
+    overflow: auto;
+
+}
+
+
+</style>
+<div class="cont-<%= message.user.id %>">
+  <div class="message-box msg-<%= message.user.id %> " >
+    <% unless message.room.is_private %>
+      <h6 class="name"> <%= message.user.username %> </h6>
+    <% end %>
   <%= message.content %>
+  </div>
 </div>
